log/build_2023-08-10_16-35-20/my_station_pkg/stderr.log
  File "/home/spiderweb/TestBase/install/my_station_pkg/lib/python3.10/site-packages/my_station_pkg/telemetrypoll_node.py", line 57
    await asyncio.run(main())
    ^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: 'await' outside function

